<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_surface"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".NotasAlumnoActivity">

    <!-- Contenedor horizontal para alinear imagen e icono -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/ic_notas"
            app:srcCompat="@drawable/ic_notas" />

        <TextView
            android:id="@+id/tvTituloNotas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/spectralregular"
            android:text="@string/titulo_notas_validadas"
            android:textColor="@color/md_theme_primary"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/btnNuevaNota"
        style="@style/Widget.AgendaDigital.Button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:text="@string/btn_añadir_nota_borrador"
        app:icon="@drawable/ic_notas"
        app:iconTint="@null" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvNotasAlumno"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingBottom="8dp" />
</LinearLayout>
